Fix: index.css for scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -85,5 +85,8 @@ body,
   padding: 0;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  /* // ẩn thanh scroll ngang */
+  overflow-x: hidden;
+  /* // hiệm thanh scroll dọc khi nội dung dài*/
+  overflow-y: auto;
 }
